# M-Tree

./: .gitignore  LICENSE.txt  Makefile  README  README-py  TODO  en.dic  generate-java-docs.sh  mtree.h  pt-br.dic  stats.out  stats.py  test_mtreebase.cpp  word_distance.py
Debug/: .gitignore  makefile  subdir.mk  test_mtreebase.d
cpp/: Doxyfile  Makefile  TODO  convert-fixture-to-cpp.py  functions.h  mtree.h  stats.cpp  test_mtree.cpp  test_mtreebase.cpp  word-distance.cpp  word-distance.h
cpp/tests/: fixture.h
cpp/tests/fixtures/: f01.txt  f02.txt  f03.txt  f04.txt  f05.txt  f06.txt  f07.txt  f08.txt  f09.txt  f10.txt  f11.txt  f12.txt  f13.txt  f14.txt  f15.txt  f16.txt  f17.txt  f18.txt  f19.txt  f20.txt  fG01.txt  fG02.txt  fLots.txt
java/mtree/: ComposedSplitFunction.java  DistanceFunction.java  DistanceFunctions.java  MTree.java  PartitionFunction.java  PartitionFunctions.java  PromotionFunction.java  PromotionFunctions.java  SplitFunction.java
java/wd/: Stats.java  Timer.java  WordDistance.java  WordDistanceFunction.java  WordMTree.java
mtree/: __init__.py  functions.py  heap_queue.py
mtree/tests/: test_mtree.py  test_mtreebase.py
py/: pyproject.toml  stats.py  word_distance.py
py/mtree/: __init__.py  functions.py  heap_queue.py
py/mtree/tests/: test_mtree.py  test_mtreebase.py
py/mtree/tests/fixtures/: f01.py  f02.py  f03.py  f04.py  f05.py  f06.py  f07.py  f08.py  f09.py  f10.py  f11.py  f12.py  f13.py  f14.py  f15.py  f16.py  f17.py  f18.py  f19.py  f20.py  fG01.py  fG02.py  fLots.py  generator.py
tests/: fixture.h
(+24 files in other folders)
