[tool.poetry]
name = "mtree"
version = "0.1.0"
description = "An M-Tree implementation permitting removals"
authors = ["Eduardo R. D'Avila <erdavila@gmail.com>"]
readme = "README.md"
packages = [
    { include = "mtree" },
]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
